# xxx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  xxx.cpp  xxx.h
.github/workflows/: build-and-test.yml
code/: CMakeLists.txt  hash.h  im_allocator.h  im_context.h  im_hash_id.h  im_input.h  im_layout.h  im_renderer.h  im_stack.h  im_theme.h  string_utils.h  xxx.cpp  xxx.h  xxx2.cpp  xxx2.h  xxx_draw.cpp  xxx_draw.h  xxx_drawer.h  xxx_fixed_vector.h  xxx_input.cpp  xxx_input.h  xxx_internal.h  xxx_io.cpp  xxx_io.h  xxx_layout.cpp  xxx_layout.h  xxx_unicode.cpp  xxx_unicode.h  xxx_widgets.cpp
code/example/: CMakeLists.txt  elements.cpp  main.cpp  stats.cpp
code/xxx/: CMakeLists.txt  color.h  common.h  key.h  ui.cpp  ui.h
code/xxx/impl/: compiler.h  data.h  draw.h  utf8.cpp  utf8.h
code_v3/: CMakeLists.txt  xxx-draw.cpp  xxx-draw.h  xxx-input.cpp  xxx-input.h  xxx-internal.h  xxx-layout.cpp  xxx-layout.h  xxx-renderer.cpp  xxx-renderer.h  xxx-unicode.cpp  xxx-unicode.h  xxx.cpp  xxx.h
code_v4/: CMakeLists.txt  im_color.h  im_context.h  im_input.h  im_layout.h  im_rect.cpp  im_rect.h  im_renderer.cpp  im_renderer.h  im_theme.h  im_vec2.h  test.cpp  test_0.cpp  unicode.cpp  unicode.h  xxx.cpp  xxx.h
example/: CMakeLists.txt  demo.cpp  elements.cpp  stats.cpp  test.cpp  test2.cpp  test3.cpp
ext/: CMakeLists.txt
termbox/: CMakeLists.txt
